  * [FilterS] Renamed rals_conns to apiers_conns
  * [FilterS] Updated *destination filter to get ReverseDestination form
    API
  * [SessionS] Added check for missing CGRevent
  * [SessionS] Add *cost flag for SessionSv1.ProcessEvent to calculate
    the rater cost
  * [ConnManager] Added ApierSv2 as internal connection channel instead
    of ApierSv1
  * [DiameterAgent] Using String function from diam.Message instead of
    ToJSON for request String method
  * [DiameterAgent] Updated 3gp_vendor dictionary
  * [Templates] Added new dataconvertor: *ip2hex
  * [AgentRequest] Add support for *group type and correctly overwrite
    the values in case of *variable
  * [EventReader] Correctly populate ConcurrentRequest from config
  * [FilterS] Updated *exists to dynamically compute the path if the
    path
  * [AgentRequest] Add support for *tmp path
  * [SessionS] Add new API SessionSv1.GetCost
  * [SessionS] Add support for *cdrs flag in SessionSv1.ProcessEvent
  * [StatS] Update metric definition to include path for example:
    *sum:~*req.Field1

 -- Alexandru Tripon <alexandru.tripon@itsyscom.com>  Wed, 19 Feb 2020 13:25:52 +0200

cgrates (0.10.0) UNRELEASED; urgency=medium

  * Creating first stable branch. 

 -- DanB <danb@cgrates.org>  Thu, 6 Feb 2020 12:05:00 +0200

cgrates (0.9.1~rc8) UNRELEASED; urgency=medium

  * RC8.

 -- DanB <danb@cgrates.org>  Mon, 22 Sep 2015 12:05:00 +0200

cgrates (0.9.1~rc7) UNRELEASED; urgency=low

  * RC7.

 -- DanB <danb@cgrates.org>  Wed, 3 Aug 2015 14:04:00 -0600

cgrates (0.9.1~rc6) UNRELEASED; urgency=low

  * RC6.

 -- DanB <danb@cgrates.org>  Wed, 10 Sep 2014 13:30:00 +0100

cgrates (0.9.1~rc5) UNRELEASED; urgency=low

  * RC5.

 -- DanB <danb@cgrates.org>  Mon, 18 Aug 2014 13:30:00 +0100


cgrates (0.9.1~rc4) UNRELEASED; urgency=low

  * RC4.

 -- DanB <danb@cgrates.org>  Thu, 25 Mar 2014 17:30:00 +0100

cgrates (0.9.1~rc3) UNRELEASED; urgency=low

  * RC3.

 -- DanB <danb@cgrates.org>  Fri, 03 Jan 2014 17:37:31 +0100