@@ -100,6 +100,7 @@
 	"prefix_indexed_fields":["Destination"],
 	"stats_conns": ["*internal"],
 	"resources_conns": ["*internal"],
+	"rals_conns": ["*internal"],
 },
 
 
